--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
 	</parent>
 
 	<dependencies>
+
+		<!-- SPRING WEB	-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 		<!-- SPRING JPA-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
