migrado o mysql pro postgres

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,13 @@
 			<version>2.4.4</version>
 		</dependency>
 
+		<!-- POSTGRESQL	-->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.8</version>
+		</dependency>
+
 		<!-- SRPING DEVTOOLS -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
