--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-
-
-# spring.datasource.url=jdbc:mariadb://localhost:3306/db_agenda_v4
-# spring.datasource.username=root
-# spring.datasource.password=
-# spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_agenda_v4
-spring.datasource.username=postgres
-spring.datasource.password=senac
-spring.jpa.hibernate.ddl-auto=update
-
+spring.profiles.active=prod
